// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config cs should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "Když lépe pochopíme, co vás zajímá, budeme vám zobrazovat přesnější obsah na míru.
      Kliknutím na tlačítko „Přijmout všechny“ dáte společnostem test1, test2 a test3 souhlas s využíváním souborů Cookies na účely personalizace, analýzy a cíleného marketingu.
      Používání Cookies si můžete <a href=\\"\\" data-cc=\\"c-settings\\">přizpůsobit v nastavení</a>.
      Můžete si také přečíst, <a href=\\"https://www.lmc.eu/cs/cookies/\\" target=\\"_blank\\">co jsou Cookies a jak je používáme?</a>",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Přijmout všechny",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Přijmout nezbytné",
    },
    "title": "Díky Cookies budou naše stránky ještě lepší",
  },
  "settings_modal": Object {
    "accept_all_btn": "Přijmout všechny",
    "blocks": Array [
      Object {
        "description": "Abyste z našich stránek získali maximum, je nejlepší povolit všechny typy Cookies.
          Další informace o tom, co jsou Cookies a jak s nimi pracujeme, najdete na stránkách
          <a href=\\"https://www.lmc.eu/cs/cookies/\\" target=\\"_blank\\">Používání Cookies</a>
          a <a href=\\"https://www.lmc.eu/cs/zasady-ochrany-soukromi\\" target=\\"_blank\\">Zásady ochrany soukromí</a>.",
      },
      Object {
        "description": "Tyto Cookies jsou pro správné fungování našeho webu nezbytné, proto není možné je vypnout.
          Bez nich by na našich stránkách např. nešel zobrazit žádný obsah nebo by nefungovalo přihlášení.",
        "title": "Technicky nezbytné Cookies",
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "description": "Pomocí nich sledujeme, kolik lidí náš web navštěvuje a jak ho používají.
          Díky tomu můžeme stránky a další služby neustále vylepšovat.",
        "title": "Analytické Cookies",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "description": "Díky těmto Cookies jsou naše stránky ještě výkonnější a fungují lépe.
          Například nám umožňují používat chat, abychom na vaše otázky mohli odpovídat rychle a jednoduše.",
        "title": "Funkční Cookies",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "description": "S těmito Cookies můžeme měřit, jak efektivní je naše reklama a cílené nabídky našich služeb.
          Marketingové Cookies nám umožní vás na Internetu upozornit na novinky, které vás můžou zajímat.",
        "title": "Marketingové Cookies",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "description": "Naše služby fungují lépe, když je můžeme přizpůsobit na míru konkrétnímu uživateli.
          Povolením Personalizačních cookies zvýšíte šanci, že najdete právě takový obsah, jaký hledáte.",
        "title": "Personalizační Cookies",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
    "reject_all_btn": "Přijmout nezbytné",
    "save_settings_btn": "Uložit nastavení",
    "title": "Přizpůsobit nastavení Cookies",
  },
}
`;

exports[`config de should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "Indem Sie auf „Alles akzeptieren“ klicken, stimmen Sie der Verwendung von Cookies und anderen Identifikatoren auf Ihrem Gerät durch test1, test2 und test3 zu. Die Verwendung dieser Cookies und anderer Identifikatoren erleichtert die Navigation auf der Website, die Anzeige personalisierter Inhalte, gezieltes Marketing und die Analyse der Nutzung unserer Produkte und Dienstleistungen.
      <a href=\\"\\" data-cc=\\"c-settings\\">TODO show settings</a>.
      Weitere Informationen finden Sie unter <a href=\\"https://www.lmc.eu/en/cookies/\\" target=\\"_blank\\">Verwendung von Cookies</a>.",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Alles akzeptieren",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Das Notwendigste akzeptieren",
    },
    "title": "Diese Website verwendet Cookies",
  },
  "settings_modal": Object {
    "accept_all_btn": "Alles akzeptieren",
    "blocks": Array [
      Object {
        "description": "Lorem ipsum",
      },
      Object {
        "description": "Lorem ipsum",
        "title": "NECESSARY TODO",
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "ANALYTICS TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "FUNCTIONALITY TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "AD TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "PERSONALIZATION TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
    "reject_all_btn": "Das Notwendigste akzeptieren",
    "save_settings_btn": "save_settings_btn TODO",
    "title": "title TODO",
  },
}
`;

exports[`config en should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "By better understanding what you're interested in, we'll show you more relevant content.
      By clicking the \\"Accept all\\" button, you give test1, test2 and test3 your consent to use cookies for personalisation, analytics and targeted marketing.
      <a href=\\"\\" data-cc=\\"c-settings\\">TODO show settings</a>.
      <a href=\\"https://www.lmc.eu/en/cookies/\\" target=\\"_blank\\">What are cookies and how do we use them?</a>",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Accept all",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Accept necessary",
    },
    "title": "Cookies make our site even better",
  },
  "settings_modal": Object {
    "accept_all_btn": "Accept all",
    "blocks": Array [
      Object {
        "description": "Lorem ipsum",
      },
      Object {
        "description": "Lorem ipsum",
        "title": "NECESSARY TODO",
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "ANALYTICS TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "FUNCTIONALITY TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "AD TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "PERSONALIZATION TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
    "reject_all_btn": "Accept necessary",
    "save_settings_btn": "save_settings_btn TODO",
    "title": "title TODO",
  },
}
`;

exports[`config hu should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "A „Mindent elfogadok” gombra kattintva a hozzájárulását adja ahhoz, hogy az test1, test2 és test3 süti fájlokat és egyéb azonosítókat használjon az Ön eszközén. E süti fájlok és egyéb azonosítók használata megkönnyíti a weboldalon belüli navigációt, a személyre szabott tartalom megjelenítését, a célzott marketinget, valamint termékeink és szolgáltatásaink használatának elemzését.
      <a href=\\"\\" data-cc=\\"c-settings\\">TODO show settings</a>.
      Bővebb információkat a <a href=\\"https://www.lmc.eu/en/cookies/\\" target=\\"_blank\\">Sütihasználat</a> oldalon talál.",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Minden elfogadása",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "A legszükségesebbek elfogadása",
    },
    "title": "Az oldalak süti fájlokat használnak",
  },
  "settings_modal": Object {
    "accept_all_btn": "Minden elfogadása",
    "blocks": Array [
      Object {
        "description": "Lorem ipsum",
      },
      Object {
        "description": "Lorem ipsum",
        "title": "NECESSARY TODO",
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "ANALYTICS TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "FUNCTIONALITY TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "AD TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "PERSONALIZATION TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
    "reject_all_btn": "A legszükségesebbek elfogadása",
    "save_settings_btn": "save_settings_btn TODO",
    "title": "title TODO",
  },
}
`;

exports[`config pl should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "Gdy lepiej zrozumiemy, co Cię interesuje, pokażemy dokładniejsze treści dopasowane do Twoich preferencji.
      Kliknij w przycisk „Akceptuj wszystkie”, aby wyrazić zgodę na wykorzystanie plików cookie przez
      firmy test1, test2 i test3 do personalizacji, analizy i ukierunkowanego marketingu.
      <a href=\\"\\" data-cc=\\"c-settings\\">TODO show settings</a>.
      <a href=\\"https://www.lmc.eu/pl/cookies\\" target=\\"_blank\\">Co to są pliki cookie i jak je wykorzystujemy?</a>",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Akceptuj wszystkie",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Akceptuj niezbędne",
    },
    "title": "Dzięki plikom Cookies nasza strona będzie jeszcze lepsza",
  },
  "settings_modal": Object {
    "accept_all_btn": "Akceptuj wszystkie",
    "blocks": Array [
      Object {
        "description": "Lorem ipsum",
      },
      Object {
        "description": "Lorem ipsum",
        "title": "NECESSARY TODO",
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "ANALYTICS TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "FUNCTIONALITY TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "AD TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "PERSONALIZATION TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
    "reject_all_btn": "Akceptuj niezbędne",
    "save_settings_btn": "save_settings_btn TODO",
    "title": "title TODO",
  },
}
`;

exports[`config ru should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "Нажав «Принять все», Вы даете свое согласие компаниям test1, test2 и test3 на использование файлов cookie и других идентификаторов на Вашем устройстве. Использование файлов cookie и других идентификаторов облегчит навигацию по сайту, отображения персонализированного контента, целевой маркетинг, анализ использования наших продуктов и услуг.
      <a href=\\"\\" data-cc=\\"c-settings\\">TODO show settings</a>.
      Для получения дополнительной информации см. раздел <a href=\\"https://www.lmc.eu/en/cookies/\\" target=\\"_blank\\">использование файлов cookie</a>.",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Принять все",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Принятие необходимо",
    },
    "title": "Этот сайт использует файлы cookie",
  },
  "settings_modal": Object {
    "accept_all_btn": "Принять все",
    "blocks": Array [
      Object {
        "description": "Lorem ipsum",
      },
      Object {
        "description": "Lorem ipsum",
        "title": "NECESSARY TODO",
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "ANALYTICS TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "FUNCTIONALITY TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "AD TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "PERSONALIZATION TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
    "reject_all_btn": "Принятие необходимо",
    "save_settings_btn": "save_settings_btn TODO",
    "title": "title TODO",
  },
}
`;

exports[`config sk should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "Presnejší obsah na mieru vám budeme zobrazovať, keď lepšie pochopíme, čo vás zaujíma.
      Kliknutím na tlačidlo „Prijať všetky“, čím dáte spoločnostiam test1, test2 a test3 súhlas s využívaním súborov Cookies za účelom personalizácie, analýzy a cieleného marketingu.
      <a href=\\"\\" data-cc=\\"c-settings\\">TODO show settings</a>.
      <a href=\\"https://www.lmc.eu/sk/cookies\\" target=\\"_blank\\">Čo sú to Cookies a ako ich používame?</a>",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Prijať všetky",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Prijať nevyhnutné",
    },
    "title": "Vďaka Cookies budú naše stránky ešte lepšie",
  },
  "settings_modal": Object {
    "accept_all_btn": "Prijať všetky",
    "blocks": Array [
      Object {
        "description": "Lorem ipsum",
      },
      Object {
        "description": "Lorem ipsum",
        "title": "NECESSARY TODO",
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "ANALYTICS TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "FUNCTIONALITY TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "AD TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "PERSONALIZATION TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
    "reject_all_btn": "Prijať nevyhnutné",
    "save_settings_btn": "save_settings_btn TODO",
    "title": "title TODO",
  },
}
`;

exports[`config uk should return localization object 1`] = `
Object {
  "consent_modal": Object {
    "description": "Натиснувши «Прийняти все», Ви даєте свою згоду компаніям test1, test2 i test3 на використання файлів cookie та інших ідентифікаторів на Вашому пристрої. Використання цих файлів cookie та інших ідентифікаторів полегшить навігацію по сайту, відображення персоналізованого контенту, цільовий маркетинг, аналіз використання наших продуктів і послуг.
      <a href=\\"\\" data-cc=\\"c-settings\\">TODO show settings</a>.
      Для отримання додаткової інформації див. розділ <a href=\\"https://www.lmc.eu/en/cookies/\\" target=\\"_blank\\">Використання файлів cookie</a>.",
    "primary_btn": Object {
      "role": "accept_all",
      "text": "Прийняти все",
    },
    "secondary_btn": Object {
      "role": "accept_necessary",
      "text": "Прийняття необхідно",
    },
    "title": "Цей сайт використовує файли cookie",
  },
  "settings_modal": Object {
    "accept_all_btn": "Прийняти все",
    "blocks": Array [
      Object {
        "description": "Lorem ipsum",
      },
      Object {
        "description": "Lorem ipsum",
        "title": "NECESSARY TODO",
        "toggle": Object {
          "enabled": true,
          "readonly": true,
          "value": "necessary",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "ANALYTICS TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "analytics",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "FUNCTIONALITY TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "functionality",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "AD TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "ad",
        },
      },
      Object {
        "description": "Lorem ipsum",
        "title": "PERSONALIZATION TODO",
        "toggle": Object {
          "enabled": false,
          "readonly": false,
          "value": "personalization",
        },
      },
    ],
    "reject_all_btn": "Прийняття необхідно",
    "save_settings_btn": "save_settings_btn TODO",
    "title": "title TODO",
  },
}
`;
